--- a/stochprog/farmer.ipynb
+++ b/stochprog/farmer.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Farmer problem \n",
-    "### Victor M. Zavala 2016 \n",
-    "### University of Wisconsin-Madison "
+    "Farmer problem (here-and-now) policy\n",
+    "\n",
+    "Mauricio Tombini and Victor M. Zavala 2016 \n",
+    "\n",
+    "University of Wisconsin-Madison  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +29,18 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Model parameters\n",
     "\n",
@@ -66,7 +79,7 @@
     "yield[2,3] = 15;\n",
     "yield[3,3] = 20;\n",
     "yield[4,3] = 25;\n",
-    "yield[5,3] = 30;"
+    "yield[5,3] = 30"
    ]
   },
   {
@@ -95,11 +108,9 @@
     "@defVar(m, x[S,P] >= 0)    # acres devoted to crops\n",
     "@defVar(m, y[S,P] >= 0)    # crops purchase\n",
     "@defVar(m, w[S,P] >= 0)    # crops sold;\n",
-    "@defExpr(m, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
-    "@defVar(m, cost[s in S])\n",
+    "@defVar(m, cost[s in S])   # per scenario cost\n",
     "\n",
-    "\n",
-    "@addConstraint(m, varcost[s in S], cost[s] == Cost[s]) \n",
+    "@addConstraint(m, varcost[s in S], cost[s] == sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P}) \n",
     "@addConstraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
     "@addConstraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
     "@addConstraint(m, sellb[s in S], w[s,3] <= 6000)\n",
@@ -122,84 +133,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 220.00000379973474\n",
-      "  [1,2] = 79.99999920015239\n",
-      "  [1,3] = 200.0000020000673\n",
-      "[2,:]\n",
-      "  [2,1] = 220.00000379973474\n",
-      "  [2,2] = 79.99999920015239\n",
-      "  [2,3] = 200.0000020000673\n",
-      "[3,:]\n",
-      "  [3,1] = 220.00000379973474\n",
-      "  [3,2] = 79.99999920015239\n",
-      "  [3,3] = 200.0000020000673\n",
-      "[4,:]\n",
-      "  [4,1] = 220.00000379973474\n",
-      "  [4,2] = 79.99999920015239\n",
-      "  [4,3] = 200.0000020000673\n",
-      "[5,:]\n",
-      "  [5,1] = 220.00000379973474\n",
-      "  [5,2] = 79.99999920015239\n",
-      "  [5,3] = 200.0000020000673\n",
+      "x: 2 dimensions, 15 entries:\n",
+      " [1,1] = 220.00000380066524\n",
+      " [1,2] = 79.9999992000006\n",
+      " [1,3] = 200.00000199933396\n",
+      " [2,1] = 220.00000380066524\n",
+      " [2,2] = 79.9999992000006\n",
+      " [2,3] = 200.00000199933396\n",
+      " [3,1] = 220.00000380066524\n",
+      " [3,2] = 79.9999992000006\n",
+      " [3,3] = 200.00000199933396\n",
+      " [4,1] = 220.00000380066524\n",
+      " [4,2] = 79.99999920000062\n",
+      " [4,3] = 200.00000199933396\n",
+      " [5,1] = 220.00000380066524\n",
+      " [5,2] = 79.99999920000062\n",
+      " [5,3] = 200.00000199933396\n",
       "\n",
+      "y: 2 dimensions, 15 entries:\n",
+      " [1,1] = 0.0\n",
+      " [1,2] = 0.0\n",
+      " [1,3] = 9.99861130401085e-9\n",
+      " [2,1] = 0.0\n",
+      " [2,2] = 0.0\n",
+      " [2,3] = 9.998611304001737e-9\n",
+      " [3,1] = 0.0\n",
+      " [3,2] = 0.0\n",
+      " [3,3] = 9.998611304009665e-9\n",
+      " [4,1] = 0.0\n",
+      " [4,2] = 0.0\n",
+      " [4,3] = 9.998614010973276e-9\n",
+      " [5,1] = 0.0\n",
+      " [5,2] = 0.0\n",
+      " [5,3] = 9.990331945867265e-9\n",
       "\n",
-      "y: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 0.0\n",
-      "  [1,2] = 0.0\n",
-      "  [1,3] = 0.0\n",
-      "[2,:]\n",
-      "  [2,1] = 0.0\n",
-      "  [2,2] = 0.0\n",
-      "  [2,3] = 0.0\n",
-      "[3,:]\n",
-      "  [3,1] = 0.0\n",
-      "  [3,2] = 0.0\n",
-      "  [3,3] = 0.0\n",
-      "[4,:]\n",
-      "  [4,1] = 0.0\n",
-      "  [4,2] = 0.0\n",
-      "  [4,3] = 0.0\n",
-      "[5,:]\n",
-      "  [5,1] = 0.0\n",
-      "  [5,2] = 0.0\n",
-      "  [5,3] = 0.0\n",
+      "w: 2 dimensions, 15 entries:\n",
+      " [1,1] = 350.0000114916636\n",
+      " [1,2] = 0.0\n",
+      " [1,3] = 2000.0000200133368\n",
+      " [2,1] = 350.0000114916636\n",
+      " [2,2] = 0.0\n",
+      " [2,3] = 3000.0000300100064\n",
+      " [3,1] = 350.0000114916636\n",
+      " [3,2] = 0.0\n",
+      " [3,3] = 4000.0000400066765\n",
+      " [4,1] = 350.0000114916636\n",
+      " [4,2] = 0.0\n",
+      " [4,3] = 5000.000050003346\n",
+      " [5,1] = 350.0000114916636\n",
+      " [5,2] = 0.0\n",
+      " [5,3] = 6000.0000599999985\n",
       "\n",
+      "cost: 1 dimensions, 5 entries:\n",
+      " [1] = -28100.001771116193\n",
+      " [2] = -64100.0021309963\n",
+      " [3] = -100100.0024908764\n",
+      " [4] = -136100.0028507565\n",
+      " [5] = -172100.003210636\n",
       "\n",
-      "w: 2 dimensions:\n",
-      "[1,:]\n",
-      "  [1,1] = 350.00001148944745\n",
-      "  [1,2] = 0.0\n",
-      "  [1,3] = 2000.0000200003253\n",
-      "[2,:]\n",
-      "  [2,1] = 350.00001148944745\n",
-      "  [2,2] = 0.0\n",
-      "  [2,3] = 3000.000030000662\n",
-      "[3,:]\n",
-      "  [3,1] = 350.00001148944745\n",
-      "  [3,2] = 0.0\n",
-      "  [3,3] = 4000.0000400009985\n",
-      "[4,:]\n",
-      "  [4,1] = 350.00001148944745\n",
-      "  [4,2] = 0.0\n",
-      "  [4,3] = 5000.000050001335\n",
-      "[5,:]\n",
-      "  [5,1] = 350.00001148944745\n",
-      "  [5,2] = 0.0\n",
-      "  [5,3] = 6000.000059999594\n",
-      "\n",
-      "\n",
-      "cost: 1 dimensions:\n",
-      "[1] = -28100.001770180523\n",
-      "[2] = -64100.00213019264\n",
-      "[3] = -100100.00249020477\n",
-      "[4] = -136100.00285021687\n",
-      "[5] = -172100.00321015422\n",
-      "\n",
-      "\n",
-      "obj -100100.00249018983\n"
+      "obj -100100.00249087629\n"
      ]
     }
    ],
@@ -229,15 +221,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.2",
+   "display_name": "Julia 0.3.12",
    "language": "julia",
-   "name": "julia-0.4"
+   "name": "julia-0.3"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.2"
+   "version": "0.3.12"
   }
  },
  "nbformat": 4,
