--- a/stochprog/farmerdet.ipynb
+++ b/stochprog/farmerdet.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Farmer problem \n",
-    "### Victor M. Zavala 2016 \n",
-    "### University of Wisconsin-Madison "
+    "Farmer problem (deterministic policy)\n",
+    "\n",
+    "Mauricio Tombini and Victor M. Zavala 2016 \n",
+    "\n",
+    "University of Wisconsin-Madison "
    ]
   },
   {
@@ -66,6 +68,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solve deterministic problem using average forecast for yields"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {
@@ -105,6 +114,13 @@
     "@setObjective(mp, Min, (1/NS)*sum{cost[s], s in S})\n",
     "\n",
     "solve(mp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solve recourse problem using deterministic first-stage solution and actual yields"
    ]
   },
   {
