--- a/stochprog/farmercvar.ipynb
+++ b/stochprog/farmercvar.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Farmer problem \n",
-    "### Victor M. Zavala 2016 \n",
-    "### University of Wisconsin-Madison "
+    "Farmer problem (CVaR policy) \n",
+    "\n",
+    "Mauricio Tombini and Victor M. Zavala 2016 \n",
+    "\n",
+    "University of Wisconsin-Madison "
    ]
   },
   {
