--- a/stochprog/farmerws.ipynb
+++ b/stochprog/farmerws.ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Farmer problem \n",
-    "### Victor M. Zavala 2016 \n",
-    "### University of Wisconsin-Madison "
+    "Farmer problem (wait-and-see policy)\n",
+    "\n",
+    "Mauricio Tombini and Victor M. Zavala 2016 \n",
+    "\n",
+    "University of Wisconsin-Madison "
    ]
   },
   {
@@ -67,6 +69,13 @@
     "yield[3,3] = 20;\n",
     "yield[4,3] = 25;\n",
     "yield[5,3] = 30;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this problem we remove the non-anticipativity constraints"
    ]
   },
   {
