--- a/PIPS_examples/stochpdegas_PIPS.ipynb
+++ b/PIPS_examples/stochpdegas_PIPS.ipynb
@@ -162,8 +162,7 @@
     "         @addConstraint(m, flow_end[i = SCEN, j = LINK, t = TIMEG], fx[i,j,t,Nx]==fout[i,j,t])\n",
     "\n",
     "         # pressure equations for passive and active links\n",
-    "         @addConstraint(m, press[i = SCEN, j = LINK, t = TIMEGm,k = 1:(Nx-1)], (fx[i,j,t+1,k]-fx[i,j,t,k])/dtG == - linkDict[j].c2*(px[i,j,t+1,k+1]-px[i,j,t+1,k])/linkDict[j].dx - \\\n",
-    "slack[i,j,t+1,k])\n",
+    "         @addConstraint(m, press[i = SCEN, j = LINK, t = TIMEGm,k = 1:(Nx-1)], (fx[i,j,t+1,k]-fx[i,j,t,k])/dtG == - linkDict[j].c2*(px[i,j,t+1,k+1]-px[i,j,t+1,k])/linkDict[j].dx - slack[i,j,t+1,k])\n",
     "         @addNLConstraint(m, slackeq[i = SCEN, j = LINK, t = TIMEG, k = 1:Nx],  slack[i,j,t,k]*px[i,j,t,k] - linkDict[j].c3*fx[i,j,t,k]*fx[i,j,t,k] == 0);\n",
     "\n",
     "         # boundary conditions pressure, passive links\n",
