--- a/PIPS_examples/stochpdegas_PIPS_parallel.ipynb
+++ b/PIPS_examples/stochpdegas_PIPS_parallel.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "run(`mpirun -np 2 /opt/julia-0.4.2/bin/stochpdegas_PIPS.jl`)"
+    "run(`mpirun -np 2 /opt/julia-0.4.2/bin/julia stochpdegas_PIPS.jl`)"
    ]
   },
   {
