add sigmoid approximation

--- a/stochprog/farmer-probconstraint.ipynb
+++ b/stochprog/farmer-probconstraint.ipynb
@@ -428,7 +428,7 @@
     }
    ],
    "source": [
-    "# Model (with cvar)\n",
+    "# Model (with sigmoid approximation)\n",
     "b= 10\n",
     "c= 1e-3\n",
     "\n",
