Updated syntax to JuMP 0.13.  Switched plots to Gadfly

--- a/stochprog/farmer.ipynb
+++ b/stochprog/farmer.ipynb
@@ -45,8 +45,8 @@
     "# Model parameters\n",
     "\n",
     "NS = 5;                    # number of scenarios\n",
-    "S = collect([1:NS]);       # scenario set\n",
-    "P = collect([1:3]);        # set of crops (1=wheat,2=corn,3=beets)\n",
+    "S = collect(1:NS);       # scenario set\n",
+    "P = collect(1:3);        # set of crops (1=wheat,2=corn,3=beets)\n",
     "\n",
     "# Data \n",
     "prcost = zeros(3)          # production (planting) cost\n",
@@ -105,19 +105,19 @@
     "\n",
     "m = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
-    "@defVar(m, x[S,P] >= 0)    # acres devoted to crops\n",
-    "@defVar(m, y[S,P] >= 0)    # crops purchase\n",
-    "@defVar(m, w[S,P] >= 0)    # crops sold;\n",
-    "@defVar(m, cost[s in S])   # per scenario cost\n",
+    "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
+    "@variable(m, y[S,P] >= 0)    # crops purchase\n",
+    "@variable(m, w[S,P] >= 0)    # crops sold;\n",
+    "@variable(m, cost[s in S])   # per scenario cost\n",
     "\n",
-    "@addConstraint(m, varcost[s in S], cost[s] == sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P}) \n",
-    "@addConstraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
-    "@addConstraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
-    "@addConstraint(m, sellb[s in S], w[s,3] <= 6000)\n",
-    "@addConstraint(m, buyb[s in S], y[s,3] <= 0)\n",
-    "@addConstraint(m, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
+    "@constraint(m, varcost[s in S], cost[s] == sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P}) \n",
+    "@constraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
+    "@constraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
+    "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
+    "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
+    "@constraint(m, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
     "\n",
-    "@setObjective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "@objective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
     "\n",
     "solve(m)"
    ]
