--- a/stochprog/farmercvar.ipynb
+++ b/stochprog/farmercvar.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
        "1.0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,8 +45,8 @@
     "# Model parameters\n",
     "\n",
     "NS = 5;                    # number of scenarios\n",
-    "S = collect([1:NS]);       # scenario set\n",
-    "P = collect([1:3]);        # set of crops (1=wheat,2=corn,3=beets)\n",
+    "S = collect(1:NS);       # scenario set\n",
+    "P = collect(1:3);        # set of crops (1=wheat,2=corn,3=beets)\n",
     "\n",
     "# Data \n",
     "prcost = zeros(3)          # production (planting) cost\n",
@@ -88,18 +88,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "******************************************************************************\n",
+      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
+      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
+      "         For more information visit http://projects.coin-or.org/Ipopt\n",
+      "******************************************************************************\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        ":Optimal"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,30 +122,30 @@
     "\n",
     "m = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
-    "@defVar(m, x[S,P] >= 0)    # acres devoted to crops\n",
-    "@defVar(m, y[S,P] >= 0)    # crops purchase\n",
-    "@defVar(m, w[S,P] >= 0)    # crops sold;\n",
-    "@defVar(m, phi[S] >= 0)    # cvar auxiliary variable\n",
-    "@defVar(m, VaR)            # cvar auxiliary variable\n",
-    "@defExpr(m, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
-    "@defVar(m, cost[s in S])\n",
+    "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
+    "@variable(m, y[S,P] >= 0)    # crops purchase\n",
+    "@variable(m, w[S,P] >= 0)    # crops sold;\n",
+    "@variable(m, phi[S] >= 0)    # cvar auxiliary variable\n",
+    "@variable(m, VaR)            # cvar auxiliary variable\n",
+    "@expression(m, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
+    "@variable(m, cost[s in S])\n",
     "\n",
-    "@addConstraint(m, varcost[s in S], cost[s] == Cost[s]) \n",
-    "@addConstraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
-    "@addConstraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j])\n",
-    "@addConstraint(m, sellb[s in S], w[s,3] <= 6000)\n",
-    "@addConstraint(m, buyb[s in S], y[s,3] <= 0)\n",
-    "@addConstraint(m, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
-    "@addConstraint(m, cvar[s in S], cost[s]-VaR <= phi[s])\n",
+    "@constraint(m, varcost[s in S], cost[s] == Cost[s]) \n",
+    "@constraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
+    "@constraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j])\n",
+    "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
+    "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
+    "@constraint(m, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
+    "@constraint(m, cvar[s in S], cost[s]-VaR <= phi[s])\n",
     "\n",
-    "@setObjective(m, Min, VaR + (1/NS)*sum{(1/alpha)*phi[s], s in S})\n",
+    "@objective(m, Min, VaR + (1/NS)*sum{(1/alpha)*phi[s], s in S})\n",
     " \n",
     "solve(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -143,25 +156,25 @@
      "text": [
       "x: 2 dimensions:\n",
       "[1,:]\n",
-      "  [1,1] = 220.00000379973474\n",
+      "  [1,1] = 220.0000037997347\n",
       "  [1,2] = 79.99999920015239\n",
-      "  [1,3] = 200.00000200006727\n",
+      "  [1,3] = 200.0000020000673\n",
       "[2,:]\n",
-      "  [2,1] = 220.00000379973474\n",
+      "  [2,1] = 220.0000037997347\n",
       "  [2,2] = 79.99999920015239\n",
-      "  [2,3] = 200.00000200006727\n",
+      "  [2,3] = 200.0000020000673\n",
       "[3,:]\n",
-      "  [3,1] = 220.00000379973474\n",
+      "  [3,1] = 220.0000037997347\n",
       "  [3,2] = 79.99999920015239\n",
-      "  [3,3] = 200.00000200006727\n",
+      "  [3,3] = 200.0000020000673\n",
       "[4,:]\n",
-      "  [4,1] = 220.00000379973474\n",
+      "  [4,1] = 220.0000037997347\n",
       "  [4,2] = 79.99999920015239\n",
-      "  [4,3] = 200.00000200006727\n",
+      "  [4,3] = 200.0000020000673\n",
       "[5,:]\n",
-      "  [5,1] = 220.00000379973474\n",
+      "  [5,1] = 220.0000037997347\n",
       "  [5,2] = 79.99999920015239\n",
-      "  [5,3] = 200.00000200006727\n",
+      "  [5,3] = 200.0000020000673\n",
       "\n",
       "\n",
       "y: 2 dimensions:\n",
@@ -189,19 +202,19 @@
       "\n",
       "w: 2 dimensions:\n",
       "[1,:]\n",
-      "  [1,1] = 350.0000114894474\n",
+      "  [1,1] = 350.00001148944733\n",
       "  [1,2] = 0.0\n",
-      "  [1,3] = 2000.000020000325\n",
+      "  [1,3] = 2000.0000200003253\n",
       "[2,:]\n",
-      "  [2,1] = 350.0000114894474\n",
+      "  [2,1] = 350.00001148944733\n",
       "  [2,2] = 0.0\n",
-      "  [2,3] = 3000.000030000662\n",
+      "  [2,3] = 3000.0000300006614\n",
       "[3,:]\n",
-      "  [3,1] = 350.0000114894474\n",
+      "  [3,1] = 350.00001148944733\n",
       "  [3,2] = 0.0\n",
-      "  [3,3] = 4000.000040000998\n",
+      "  [3,3] = 4000.0000400009985\n",
       "[4,:]\n",
-      "  [4,1] = 350.0000114894474\n",
+      "  [4,1] = 350.00001148944733\n",
       "  [4,2] = 0.0\n",
       "  [4,3] = 5000.000050001334\n",
       "[5,:]\n",
@@ -211,29 +224,29 @@
       "\n",
       "\n",
       "cost: 1 dimensions:\n",
-      "[1] = -28100.001770180508\n",
-      "[2] = -64100.00213019263\n",
+      "[1] = -28100.00177018051\n",
+      "[2] = -64100.00213019262\n",
       "[3] = -100100.00249020476\n",
       "[4] = -136100.0028502168\n",
       "[5] = -172100.00321015422\n",
       "\n",
       "\n",
-      "obj: -100100.00249018724\n"
+      "obj: -100100.00249018727\n"
      ]
     }
    ],
    "source": [
     "# Results\n",
     "\n",
-    "println(getValue(x))\n",
+    "println(getvalue(x))\n",
     "println(\"\")\n",
-    "println(getValue(y))\n",
+    "println(getvalue(y))\n",
     "println(\"\")\n",
-    "println(getValue(w))\n",
+    "println(getvalue(w))\n",
     "println(\"\")\n",
-    "println(getValue(cost))\n",
+    "println(getvalue(cost))\n",
     "println(\"\")\n",
-    "println(\"obj: \", getObjectiveValue(m))"
+    "println(\"obj: \", getobjectivevalue(m))"
    ]
   },
   {
@@ -257,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.2",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
    "name": "julia-0.4"
   },
@@ -265,7 +278,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.2"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
