--- a/stochprog/farmerdet.ipynb
+++ b/stochprog/farmerdet.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -34,8 +34,8 @@
     "# Model parameters\n",
     "\n",
     "NS = 5;                    # number of scenarios\n",
-    "S = collect([1:NS]);       # scenario set\n",
-    "P = collect([1:3]);        # set of crops (1=wheat,2=corn,3=beets)\n",
+    "S = collect(1:NS);       # scenario set\n",
+    "P = collect(1:3);        # set of crops (1=wheat,2=corn,3=beets)\n",
     "\n",
     "# Data \n",
     "prcost = zeros(3)          # production (planting) cost\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +87,7 @@
        ":Optimal"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,21 +97,21 @@
     "\n",
     "mp = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
-    "@defVar(mp, x[S,P] >= 0)    # acres devoted to crops\n",
-    "@defVar(mp, y[S,P] >= 0)    # crops purchase\n",
-    "@defVar(mp, w[S,P] >= 0)    # crops sold;\n",
-    "@defExpr(mp, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
-    "@defVar(mp, cost[s in S])\n",
+    "@variable(mp, x[S,P] >= 0)    # acres devoted to crops\n",
+    "@variable(mp, y[S,P] >= 0)    # crops purchase\n",
+    "@variable(mp, w[S,P] >= 0)    # crops sold;\n",
+    "@expression(mp, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
+    "@variable(mp, cost[s in S])\n",
     "\n",
     "\n",
-    "@addConstraint(mp, varcost[s in S], cost[s] == Cost[s]) \n",
-    "@addConstraint(mp, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
-    "@addConstraint(mp, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
-    "@addConstraint(mp, sellb[s in S], w[s,3] <= 6000)\n",
-    "@addConstraint(mp, buyb[s in S], y[s,3] <= 0)\n",
-    "@addConstraint(mp, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
+    "@constraint(mp, varcost[s in S], cost[s] == Cost[s]) \n",
+    "@constraint(mp, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
+    "@constraint(mp, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
+    "@constraint(mp, sellb[s in S], w[s,3] <= 6000)\n",
+    "@constraint(mp, buyb[s in S], y[s,3] <= 0)\n",
+    "@constraint(mp, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
     "\n",
-    "@setObjective(mp, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "@objective(mp, Min, (1/NS)*sum{cost[s], s in S})\n",
     "\n",
     "solve(mp)"
    ]
@@ -125,18 +125,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "xs = getValue(x); "
+    "xs = getvalue(x); "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +147,7 @@
        ":Optimal"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,24 +163,24 @@
     "\n",
     "m = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
-    "@defVar(m, y[S,P] >= 0)    # crops purchase\n",
-    "@defVar(m, w[S,P] >= 0)    # crops sold;\n",
-    "@defVar(m, cost[s in S])\n",
+    "@variable(m, y[S,P] >= 0)    # crops purchase\n",
+    "@variable(m, w[S,P] >= 0)    # crops sold;\n",
+    "@variable(m, cost[s in S])\n",
     "\n",
-    "@defExpr(m, Cost[s in S], sum{prcost[j]*xs[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
-    "@addConstraint(m, varcost[s in S], cost[s] == Cost[s]) \n",
-    "@addConstraint(m, bal[s in S,j in P], yield[s,j]*xs[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
-    "@addConstraint(m, sellb[s in S], w[s,3] <= 6000)\n",
-    "@addConstraint(m, buyb[s in S], y[s,3] <= 0)\n",
+    "@expression(m, Cost[s in S], sum{prcost[j]*xs[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
+    "@constraint(m, varcost[s in S], cost[s] == Cost[s]) \n",
+    "@constraint(m, bal[s in S,j in P], yield[s,j]*xs[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
+    "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
+    "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
     "\n",
-    "@setObjective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "@objective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
     "\n",
     "solve(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -191,79 +191,79 @@
      "text": [
       "x = x: 2 dimensions:\n",
       "[1,:]\n",
-      "  [1,1] = 120.00000279984634\n",
-      "  [1,2] = 79.99999920015239\n",
+      "  [1,1] = 120.0000027998464\n",
+      "  [1,2] = 79.99999920015237\n",
       "  [1,3] = 300.00000299995565\n",
       "[2,:]\n",
-      "  [2,1] = 120.00000279984634\n",
-      "  [2,2] = 79.99999920015239\n",
+      "  [2,1] = 120.0000027998464\n",
+      "  [2,2] = 79.99999920015237\n",
       "  [2,3] = 300.00000299995565\n",
       "[3,:]\n",
-      "  [3,1] = 120.00000279984634\n",
-      "  [3,2] = 79.99999920015239\n",
+      "  [3,1] = 120.0000027998464\n",
+      "  [3,2] = 79.99999920015237\n",
       "  [3,3] = 300.00000299995565\n",
       "[4,:]\n",
-      "  [4,1] = 120.00000279984634\n",
-      "  [4,2] = 79.99999920015239\n",
+      "  [4,1] = 120.0000027998464\n",
+      "  [4,2] = 79.99999920015237\n",
       "  [4,3] = 300.00000299995565\n",
       "[5,:]\n",
-      "  [5,1] = 120.00000279984634\n",
-      "  [5,2] = 79.99999920015239\n",
+      "  [5,1] = 120.0000027998464\n",
+      "  [5,2] = 79.99999920015237\n",
       "  [5,3] = 300.00000299995565\n",
       "\n",
       "\n",
       "y = y: 2 dimensions:\n",
       "[1,:]\n",
       "  [1,1] = 0.0\n",
-      "  [1,2] = 2.3798087768711324e-6\n",
-      "  [1,3] = 9.65532035803641e-9\n",
+      "  [1,2] = 2.3798088337145704e-6\n",
+      "  [1,3] = 9.655320358039876e-9\n",
       "[2,:]\n",
       "  [2,1] = 0.0\n",
-      "  [2,2] = 2.3798087768711324e-6\n",
-      "  [2,3] = 9.646982445737395e-9\n",
+      "  [2,2] = 2.3798088337145704e-6\n",
+      "  [2,3] = 9.646982445756895e-9\n",
       "[3,:]\n",
       "  [3,1] = 0.0\n",
-      "  [3,2] = 2.3798087768711324e-6\n",
-      "  [3,3] = 6.278599013474232e-13\n",
+      "  [3,2] = 2.3798088337145704e-6\n",
+      "  [3,3] = 6.278599007778835e-13\n",
       "[4,:]\n",
       "  [4,1] = 0.0\n",
-      "  [4,2] = 2.3798087768711324e-6\n",
-      "  [4,3] = 3.280541440718195e-20\n",
+      "  [4,2] = 2.3798088337145704e-6\n",
+      "  [4,3] = 3.295022271316701e-20\n",
       "[5,:]\n",
       "  [5,1] = 0.0\n",
-      "  [5,2] = 2.3798087768711324e-6\n",
-      "  [5,3] = 1.608959349234551e-20\n",
+      "  [5,2] = 2.379808833714569e-6\n",
+      "  [5,3] = 1.5936539229629058e-20\n",
       "\n",
       "\n",
       "w = w: 2 dimensions:\n",
       "[1,:]\n",
-      "  [1,1] = 100.00000798972646\n",
+      "  [1,1] = 100.00000798972663\n",
       "  [1,2] = 0.0\n",
       "  [1,3] = 3000.000060008864\n",
       "[2,:]\n",
-      "  [2,1] = 100.00000798972646\n",
+      "  [2,1] = 100.00000798972663\n",
       "  [2,2] = 0.0\n",
       "  [2,3] = 4500.000090008634\n",
       "[3,:]\n",
-      "  [3,1] = 100.00000798972646\n",
+      "  [3,1] = 100.00000798972663\n",
       "  [3,2] = 0.0\n",
       "  [3,3] = 6000.000059999652\n",
       "[4,:]\n",
-      "  [4,1] = 100.00000798972646\n",
+      "  [4,1] = 100.00000798972663\n",
       "  [4,2] = 0.0\n",
       "  [4,3] = 6000.000059999652\n",
       "[5,:]\n",
-      "  [5,1] = 100.00000798972646\n",
+      "  [5,1] = 100.00000798972663\n",
       "  [5,2] = 0.0\n",
       "  [5,3] = 6000.000059999652\n",
       "\n",
       "\n",
       "cost = cost: 1 dimensions:\n",
-      "[1] = -10600.00200367929\n",
-      "[2] = -64600.003083671065\n",
-      "[3] = -118600.00200334766\n",
-      "[4] = -118600.00200334768\n",
-      "[5] = -118600.00200334768\n",
+      "[1] = -10600.002003679287\n",
+      "[2] = -64600.00308367107\n",
+      "[3] = -118600.00200334768\n",
+      "[4] = -118600.00200334769\n",
+      "[5] = -118600.00200334769\n",
       "\n",
       "\n",
       "obj: -86200.00221947869\n"
@@ -273,15 +273,15 @@
    "source": [
     "# Results\n",
     "\n",
-    "println(\"x = \",getValue(x))\n",
+    "println(\"x = \",getvalue(x))\n",
     "println(\"\")\n",
-    "println(\"y = \",getValue(y))\n",
+    "println(\"y = \",getvalue(y))\n",
     "println(\"\")\n",
-    "println(\"w = \",getValue(w))\n",
+    "println(\"w = \",getvalue(w))\n",
     "println(\"\")\n",
-    "println(\"cost = \",getValue(cost))\n",
+    "println(\"cost = \",getvalue(cost))\n",
     "println(\"\")\n",
-    "println(\"obj: \", getObjectiveValue(m))"
+    "println(\"obj: \", getobjectivevalue(m))"
    ]
   },
   {
@@ -296,7 +296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.2",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
    "name": "julia-0.4"
   },
@@ -304,7 +304,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.2"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
