--- a/stochprog/ipoptex1.ipynb
+++ b/stochprog/ipoptex1.ipynb
@@ -113,12 +113,12 @@
     "\n",
     "m = Model(solver=IpoptSolver(tol = 1e-4, max_iter = 100,linear_solver =\"mumps\",mu_strategy=\"monotone\"))\n",
     "\n",
-    "@defVar(m, x >= 0)    \n",
-    "@defVar(m, y >= 0)    \n",
+    "@variable(m, x >= 0)    \n",
+    "@variable(m, y >= 0)    \n",
     "\n",
-    "@addNLConstraint(m, cons, x^2+y^2==1) \n",
+    "@NLconstraint(m, cons, x^2+y^2==1) \n",
     "\n",
-    "@setNLObjective(m, Min, (x-1)^2 + (x-y)^3)\n",
+    "@NLobjective(m, Min, (x-1)^2 + (x-y)^3)\n",
     "\n",
     "println(\"\\n\")\n",
     "print(m)\n",
@@ -145,7 +145,7 @@
    ],
    "source": [
     "\n",
-    "println(\"x = \", getValue(x), \"\\ny = \", getValue(y))"
+    "println(\"x = \", getvalue(x), \"\\ny = \", getvalue(y))"
    ]
   },
   {
