--- a/stochprog/farmerws.ipynb
+++ b/stochprog/farmerws.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -34,8 +34,8 @@
     "# Model parameters\n",
     "\n",
     "NS = 5;                    # number of scenarios\n",
-    "S = collect([1:NS]);       # scenario set\n",
-    "P = collect([1:3]);        # set of crops (1=wheat,2=corn,3=beets)\n",
+    "S = collect(1:NS);       # scenario set\n",
+    "P = collect(1:3);        # set of crops (1=wheat,2=corn,3=beets)\n",
     "\n",
     "# Data \n",
     "prcost = zeros(3)          # production (planting) cost\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
        ":Optimal"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,28 +101,28 @@
     "\n",
     "m = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
-    "@defVar(m, x[S,P] >= 0)    # acres devoted to crops\n",
-    "@defVar(m, y[S,P] >= 0)    # crops purchase\n",
-    "@defVar(m, w[S,P] >= 0)    # crops sold;\n",
-    "@defExpr(m, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
-    "@defVar(m, cost[s in S])\n",
+    "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
+    "@variable(m, y[S,P] >= 0)    # crops purchase\n",
+    "@variable(m, w[S,P] >= 0)    # crops sold;\n",
+    "@expression(m, Cost[s in S], sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
+    "@variable(m, cost[s in S])\n",
     "\n",
     "\n",
-    "@addConstraint(m, varcost[s in S], cost[s] == Cost[s]) \n",
-    "@addConstraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
-    "@addConstraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
-    "@addConstraint(m, sellb[s in S], w[s,3] <= 6000)\n",
-    "@addConstraint(m, buyb[s in S], y[s,3] <= 0)\n",
+    "@constraint(m, varcost[s in S], cost[s] == Cost[s]) \n",
+    "@constraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
+    "@constraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
+    "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
+    "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
     "\n",
     "\n",
-    "@setObjective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "@objective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
     "\n",
     "solve(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +141,7 @@
       "  [2,2] = 79.99999920012897\n",
       "  [2,3] = 340.00000659736713\n",
       "[3,:]\n",
-      "  [3,1] = 120.00000280082533\n",
+      "  [3,1] = 120.00000280082537\n",
       "  [3,2] = 79.99999920015239\n",
       "  [3,3] = 300.0000029989767\n",
       "[4,:]\n",
@@ -149,7 +149,7 @@
       "  [4,2] = 79.99999920015239\n",
       "  [4,3] = 240.00000239922\n",
       "[5,:]\n",
-      "  [5,1] = 220.00000380042712\n",
+      "  [5,1] = 220.00000380042715\n",
       "  [5,2] = 79.99999920015239\n",
       "  [5,3] = 200.0000019993749\n",
       "\n",
@@ -158,23 +158,23 @@
       "[1,:]\n",
       "  [1,1] = 0.0\n",
       "  [1,2] = 0.0\n",
-      "  [1,3] = 9.752086119058693e-9\n",
+      "  [1,3] = 9.752086119058704e-9\n",
       "[2,:]\n",
       "  [2,1] = 0.0\n",
       "  [2,2] = 0.0\n",
-      "  [2,3] = 9.714578177618196e-9\n",
+      "  [2,3] = 9.714578177618197e-9\n",
       "[3,:]\n",
       "  [3,1] = 0.0\n",
       "  [3,2] = 0.0\n",
-      "  [3,3] = 9.580169952360632e-9\n",
+      "  [3,3] = 9.580169952360286e-9\n",
       "[4,:]\n",
       "  [4,1] = 0.0\n",
       "  [4,2] = 0.0\n",
-      "  [4,3] = 9.227902637280718e-9\n",
+      "  [4,3] = 9.227902637278397e-9\n",
       "[5,:]\n",
       "  [5,1] = 0.0\n",
       "  [5,2] = 0.0\n",
-      "  [5,3] = 8.765825074884802e-9\n",
+      "  [5,3] = 8.765825074882278e-9\n",
       "\n",
       "\n",
       "w: 2 dimensions:\n",
@@ -187,7 +187,7 @@
       "  [2,2] = 0.0\n",
       "  [2,3] = 5100.000098979874\n",
       "[3,:]\n",
-      "  [3,1] = 100.00000899217387\n",
+      "  [3,1] = 100.00000899217395\n",
       "  [3,2] = 0.0\n",
       "  [3,3] = 6000.000059998646\n",
       "[4,:]\n",
@@ -195,7 +195,7 @@
       "  [4,2] = 0.0\n",
       "  [4,3] = 6000.000059999142\n",
       "[5,:]\n",
-      "  [5,1] = 350.00001149117827\n",
+      "  [5,1] = 350.0000114911784\n",
       "  [5,2] = 0.0\n",
       "  [5,3] = 6000.000059999311\n",
       "\n",
@@ -205,7 +205,7 @@
       "[2] = -64800.002153889465\n",
       "[3] = -118600.00267570352\n",
       "[4] = -150700.0029965912\n",
-      "[5] = -172100.0032105144\n",
+      "[5] = -172100.00321051443\n",
       "\n",
       "\n",
       "obj: -113860.00263162237\n"
@@ -215,13 +215,13 @@
    "source": [
     "# Results\n",
     "\n",
-    "println(getValue(x))\n",
+    "println(getvalue(x))\n",
     "println(\"\")\n",
-    "println(getValue(y))\n",
+    "println(getvalue(y))\n",
     "println(\"\")\n",
-    "println(getValue(w))\n",
+    "println(getvalue(w))\n",
     "println(\"\")\n",
-    "println(getValue(cost))\n",
+    "println(getvalue(cost))\n",
     "println(\"\")\n",
     "println(\"obj: \", getObjectiveValue(m))"
    ]
@@ -247,7 +247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.2",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
    "name": "julia-0.4"
   },
@@ -255,7 +255,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.2"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
