updated JuMP syntax

--- a/IPCluster_examples/farm_IPCluster.ipynb
+++ b/IPCluster_examples/farm_IPCluster.ipynb
@@ -4,9 +4,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: LoadError: ArgumentError: StochJuMP not found in path\nwhile loading /home/jordan/git/JuliaBox/IPCluster_examples/ClusterIPM.jl, in expression starting on line 7\nwhile loading In[1], in expression starting on line 2",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: LoadError: ArgumentError: StochJuMP not found in path\nwhile loading /home/jordan/git/JuliaBox/IPCluster_examples/ClusterIPM.jl, in expression starting on line 7\nwhile loading In[1], in expression starting on line 2",
+      "",
+      " in require at ./loading.jl:249",
+      " in include at ./boot.jl:261",
+      " in include_from_node1 at ./loading.jl:320"
+     ]
+    }
+   ],
    "source": [
     "push!(LOAD_PATH, pwd())\n",
     "include(\"ClusterIPM.jl\")\n",
@@ -24,40 +37,13 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10000-element Array{Float64,1}:\n",
-       " 25.9513 \n",
-       " 30.2409 \n",
-       " 25.7133 \n",
-       " 22.2971 \n",
-       " 18.0166 \n",
-       " 16.6764 \n",
-       " 24.9048 \n",
-       " 19.6226 \n",
-       " 21.3691 \n",
-       " 19.0289 \n",
-       " 18.3032 \n",
-       " 15.7806 \n",
-       " 15.5553 \n",
-       "  ⋮      \n",
-       " 19.9427 \n",
-       " 30.9726 \n",
-       " 18.7831 \n",
-       " 23.764  \n",
-       " 17.8116 \n",
-       " 17.3358 \n",
-       " 22.5606 \n",
-       " 13.6795 \n",
-       " 19.6387 \n",
-       " 16.5273 \n",
-       " 16.2417 \n",
-       "  8.19846"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "LoadError: UndefVarError: Normal not defined\nwhile loading In[2], in expression starting on line 32",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: UndefVarError: Normal not defined\nwhile loading In[2], in expression starting on line 32",
+      ""
+     ]
     }
    ],
    "source": [
@@ -104,138 +90,29 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "******************************************************************************\n",
-      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
-      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
-      "         For more information visit http://projects.coin-or.org/Ipopt\n",
-      "******************************************************************************\n",
-      "\n",
-      "This is Ipopt version 3.12.4, running with linear solver ma27.\n",
-      "\n",
-      "Number of nonzeros in equality constraint Jacobian...:   149997\n",
-      "Number of nonzeros in inequality constraint Jacobian.:   140000\n",
-      "Number of nonzeros in Lagrangian Hessian.............:        0\n",
-      "\n",
-      "Total number of variables............................:   100000\n",
-      "                     variables with only lower bounds:    90000\n",
-      "                variables with lower and upper bounds:        0\n",
-      "                     variables with only upper bounds:        0\n",
-      "Total number of equality constraints.................:    40000\n",
-      "Total number of inequality constraints...............:    60000\n",
-      "        inequality constraints with only lower bounds:    30000\n",
-      "   inequality constraints with lower and upper bounds:        0\n",
-      "        inequality constraints with only upper bounds:    30000\n",
-      "\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "   0  0.0000000e+00 2.40e+02 1.00e+00  -1.0 0.00e+00    -  0.00e+00 0.00e+00   0\n",
-      "   1  1.8702538e+01 2.40e+02 2.97e+00  -1.0 1.83e+03    -  3.41e-03 1.02e-02h  1\n",
-      "   2  3.0820217e+02 2.38e+02 5.85e+00  -1.0 3.12e+04    -  4.62e-04 9.29e-03f  1\n",
-      "   3  8.3128377e+03 1.75e+02 4.31e+00  -1.0 3.02e+04    -  2.49e-02 2.65e-01f  1\n",
-      "   4  1.2022651e+04 1.45e+02 6.63e+00  -1.0 2.22e+04    -  5.97e-01 1.67e-01h  1\n",
-      "   5  1.3571976e+04 1.33e+02 1.73e+01  -1.0 1.86e+04    -  5.07e-01 8.35e-02f  1\n",
-      "   6  2.6119466e+04 3.60e+01 4.29e+00  -1.0 1.73e+04    -  3.31e-01 7.28e-01f  1\n",
-      "   7  2.7074603e+04 2.91e+01 2.96e+01  -1.0 5.57e+03    -  6.45e-01 1.88e-01f  1\n",
-      "   8  2.7443470e+04 2.66e+01 4.76e+01  -1.0 4.71e+03    -  3.30e-01 8.08e-02f  1\n",
-      "   9  2.7729039e+04 2.46e+01 7.62e+01  -1.0 4.41e+03    -  4.22e-01 6.76e-02f  1\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "  10  2.7773984e+04 2.43e+01 9.14e+01  -1.0 4.04e+03    -  1.81e-01 1.20e-02f  1\n",
-      "  11  3.0668342e+04 8.81e-01 3.75e+01  -1.0 3.84e+03    -  3.11e-01 8.42e-01f  1\n",
-      "  12  3.0350931e+04 1.03e-01 1.44e+02  -1.0 3.21e+03    -  4.24e-01 1.35e-01f  1\n",
-      "  13 -5.9328966e+04 3.54e-02 2.94e+02  -1.0 1.40e+05    -  1.66e-01 6.56e-01f  1\n",
-      "  14 -5.8902872e+04 2.17e-02 4.67e+02  -1.0 3.48e+03    -  7.21e-01 3.88e-01f  1\n",
-      "  15 -6.2764332e+04 7.48e-03 1.17e+03  -1.0 3.35e+04    -  1.34e-01 6.55e-01f  1\n",
-      "  16 -7.3519094e+04 3.10e-03 1.92e+03  -1.0 9.05e+04    -  2.76e-01 5.86e-01f  1\n",
-      "  17 -8.4764242e+04 1.86e-03 3.44e+02  -1.0 1.34e+05    -  6.85e-01 4.01e-01f  1\n",
-      "  18 -8.5299310e+04 1.79e-03 2.80e+02  -1.0 5.68e+04    -  1.64e-02 3.42e-02f  1\n",
-      "  19 -8.6791539e+04 1.62e-03 8.49e+01  -1.0 5.26e+04    -  4.25e-02 9.87e-02f  1\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "  20 -8.8666577e+04 1.38e-03 2.10e+02  -1.0 4.17e+04    -  5.31e-02 1.44e-01f  1\n",
-      "  21 -9.0421078e+04 1.15e-03 4.81e+02  -1.0 3.16e+04    -  7.81e-02 1.72e-01f  1\n",
-      "  22 -9.2042624e+04 9.03e-04 7.46e+02  -1.0 2.48e+04    -  1.05e-01 2.12e-01f  1\n",
-      "  23 -9.3433031e+04 6.77e-04 9.75e+02  -1.0 1.94e+04    -  1.34e-01 2.50e-01f  1\n",
-      "  24 -9.4570865e+04 4.88e-04 1.14e+03  -1.0 1.58e+04    -  1.60e-01 2.79e-01f  1\n",
-      "  25 -9.5461016e+04 3.32e-04 1.24e+03  -1.0 1.25e+04    -  1.94e-01 3.19e-01f  1\n",
-      "  26 -9.6123730e+04 2.13e-04 1.27e+03  -1.0 9.93e+03    -  2.31e-01 3.59e-01f  1\n",
-      "  27 -9.6594027e+04 1.29e-04 1.24e+03  -1.0 8.13e+03    -  2.65e-01 3.94e-01f  1\n",
-      "  28 -9.6924766e+04 7.06e-05 1.16e+03  -1.0 6.48e+03    -  3.14e-01 4.53e-01f  1\n",
-      "  29 -9.7031263e+04 4.88e-05 4.35e+02  -1.0 4.65e+03    -  4.20e-01 3.09e-01f  2\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "  30 -9.7229359e+04 1.51e-05 4.74e+02  -1.0 4.21e+03    -  5.55e-01 6.90e-01h  1\n",
-      "  31 -9.7258675e+04 5.44e-06 2.44e+02  -1.0 2.29e+03    -  8.99e-01 1.00e+00h  1\n",
-      "  32 -9.7262446e+04 4.98e-06 1.00e-06  -1.0 7.01e+02    -  1.00e+00 1.00e+00h  1\n",
-      "  33 -1.0090267e+05 2.39e-06 5.30e-01  -3.8 8.51e+03    -  6.97e-01 5.19e-01f  1\n",
-      "  34 -1.0228448e+05 1.40e-06 6.25e-01  -3.8 4.06e+03    -  5.11e-01 4.11e-01f  1\n",
-      "  35 -1.0307901e+05 8.34e-07 6.96e-01  -3.8 2.43e+03    -  4.99e-01 4.01e-01f  1\n",
-      "  36 -1.0354883e+05 4.98e-07 7.46e-01  -3.8 1.46e+03    -  4.93e-01 3.97e-01f  1\n",
-      "  37 -1.0382699e+05 2.99e-07 7.69e-01  -3.8 8.86e+02    -  4.82e-01 3.90e-01f  1\n",
-      "  38 -1.0398753e+05 1.84e-07 7.55e-01  -3.8 5.51e+02    -  4.48e-01 3.70e-01f  1\n",
-      "  39 -1.0407942e+05 1.18e-07 6.81e-01  -3.8 3.61e+02    -  3.87e-01 3.36e-01f  1\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "  40 -1.0414425e+05 7.15e-08 6.90e-01  -3.8 2.34e+02    -  4.27e-01 3.57e-01f  1\n",
-      "  41 -1.0418147e+05 4.48e-08 6.81e-01  -3.8 1.59e+02    -  3.77e-01 3.18e-01f  1\n",
-      "  42 -1.0420748e+05 2.62e-08 4.57e-01  -3.8 1.13e+02    -  3.26e-01 3.26e-01f  1\n",
-      "  43 -1.0424892e+05 1.07e-10 1.85e+00  -3.8 8.26e+01    -  2.64e-01 7.72e-01f  1\n",
-      "  44 -1.0426116e+05 1.16e-10 2.00e+00  -3.8 1.50e+01    -  6.76e-01 1.00e+00f  1\n",
-      "  45 -1.0426116e+05 8.73e-11 2.87e-01  -3.8 5.26e+00    -  1.00e+00 9.34e-01h  1\n",
-      "  46 -1.0426116e+05 8.73e-11 1.51e-09  -3.8 3.16e+00    -  1.00e+00 1.00e+00f  1\n",
-      "  47 -1.0426913e+05 5.82e-11 3.64e+01  -8.6 1.23e+01    -  8.87e-01 7.57e-01f  1\n",
-      "  48 -1.0427096e+05 5.82e-11 6.79e+01  -8.6 2.77e+00    -  9.48e-01 7.14e-01f  1\n",
-      "  49 -1.0427161e+05 8.73e-11 6.21e+00  -8.6 1.40e+00    -  8.32e-01 8.94e-01f  1\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "  50 -1.0427169e+05 8.73e-11 3.64e-12  -8.6 8.20e-02    -  1.00e+00 1.00e+00f  1\n",
-      "\n",
-      "Number of Iterations....: 50\n",
-      "\n",
-      "                                   (scaled)                 (unscaled)\n",
-      "Objective...............:  -1.0427168877354328e+05   -1.0427168877354328e+05\n",
-      "Dual infeasibility......:   3.6379788070917130e-12    3.6379788070917130e-12\n",
-      "Constraint violation....:   3.3581342834692738e-11    8.7311491370201111e-11\n",
-      "Complementarity.........:   2.1264588613484530e-08    2.1264588613484530e-08\n",
-      "Overall NLP error.......:   8.4745674363900713e-10    2.1264588613484530e-08\n",
-      "\n",
-      "\n",
-      "Number of objective function evaluations             = 52\n",
-      "Number of objective gradient evaluations             = 51\n",
-      "Number of equality constraint evaluations            = 52\n",
-      "Number of inequality constraint evaluations          = 52\n",
-      "Number of equality constraint Jacobian evaluations   = 51\n",
-      "Number of inequality constraint Jacobian evaluations = 51\n",
-      "Number of Lagrangian Hessian evaluations             = 50\n",
-      "Total CPU secs in IPOPT (w/o function evaluations)   =      6.583\n",
-      "Total CPU secs in NLP function evaluations           =      0.207\n",
-      "\n",
-      "EXIT: Optimal Solution Found.\n"
+     "ename": "LoadError",
+     "evalue": "LoadError: UndefVarError: IpoptSolver not defined\nwhile loading In[3], in expression starting on line 2",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: UndefVarError: IpoptSolver not defined\nwhile loading In[3], in expression starting on line 2",
+      ""
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       ":Optimal"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# build the model and solve with IPOPT\n",
     "m = Model(solver=IpoptSolver())\n",
-    "@defVar(m, x[S,P] >= 0)    # acres devoted to crops\n",
-    "@defVar(m, y[S,P] >= 0)    # crops purchase\n",
-    "@defVar(m, w[S,P] >= 0)    # crops sold;\n",
-    "@defVar(m, cost[s in S])\n",
-    "@addConstraint(m, varcost[s in S], cost[s] == sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
-    "@addConstraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
-    "@addConstraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j])\n",
-    "@addConstraint(m, sellb[s in S], w[s,3] <= 6000)\n",
-    "@addConstraint(m, buyb[s in S], y[s,3] <= 0)\n",
-    "@addConstraint(m, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
-    "@setObjective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
+    "@variable(m, y[S,P] >= 0)    # crops purchase\n",
+    "@variable(m, w[S,P] >= 0)    # crops sold;\n",
+    "@variable(m, cost[s in S])\n",
+    "@constraint(m, varcost[s in S], cost[s] == sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
+    "@constraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
+    "@constraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j])\n",
+    "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
+    "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
+    "@constraint(m, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
+    "@objective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
     "solve(m)"
    ]
   },
@@ -356,7 +233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.2",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
    "name": "julia-0.4"
   },
@@ -364,7 +241,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.2"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
