more JuMP syntax

--- a/IPCluster_examples/farm_IPCluster.ipynb
+++ b/IPCluster_examples/farm_IPCluster.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "LoadError: LoadError: ArgumentError: StochJuMP not found in path\nwhile loading /home/jordan/git/JuliaBox/IPCluster_examples/ClusterIPM.jl, in expression starting on line 7\nwhile loading In[1], in expression starting on line 2",
+     "evalue": "LoadError: LoadError: ArgumentError: StochJuMP not found in path\nwhile loading /home/jordan/git/JuliaBox/IPCluster_examples/ClusterIPM.jl, in expression starting on line 7\nwhile loading In[4], in expression starting on line 2",
      "output_type": "error",
      "traceback": [
-      "LoadError: LoadError: ArgumentError: StochJuMP not found in path\nwhile loading /home/jordan/git/JuliaBox/IPCluster_examples/ClusterIPM.jl, in expression starting on line 7\nwhile loading In[1], in expression starting on line 2",
+      "LoadError: LoadError: ArgumentError: StochJuMP not found in path\nwhile loading /home/jordan/git/JuliaBox/IPCluster_examples/ClusterIPM.jl, in expression starting on line 7\nwhile loading In[4], in expression starting on line 2",
       "",
       " in require at ./loading.jl:249",
       " in include at ./boot.jl:261",
@@ -204,19 +204,19 @@
    "source": [
     "# build with StochJuMP and solve with IPCluster\n",
     "m = StochasticModel(NS)\n",
-    "@defVar(m, x[P] >= 0)    # acres devoted to crops\n",
-    "@defVar(m, s2 >= 0)\n",
-    "@addConstraint(m, cap, sum{x[j], j in P} + s2 == 500)\n",
-    "@setObjective(m, Min, sum{prcost[j]*x[j], j in P})\n",
+    "@variable(m, x[P] >= 0)    # acres devoted to crops\n",
+    "@variable(m, s2 >= 0)\n",
+    "@constraint(m, cap, sum{x[j], j in P} + s2 == 500)\n",
+    "@objective(m, Min, sum{prcost[j]*x[j], j in P})\n",
     "for i in 1:NS\n",
     "    bl = StochasticBlock(m)\n",
-    "    @defVar(bl, y[P] >= 0)    # crops purchase\n",
-    "    @defVar(bl, w[P] >= 0)    # crops sold;\n",
-    "    @defVar(bl, s[P] >= 0)\n",
-    "    @addConstraint(bl, bal[j in P], yield[i,j]*x[j]+y[j]-w[j] - s[j] == demand[j])\n",
-    "    setUpper(w[3], 6000)\n",
-    "    setUpper(y[3], 0)\n",
-    "    @setObjective(bl, Min, 1.0/NS*sum{pcost[j]*y[j] - scost[j]*w[j], j in P})\n",
+    "    @variable(bl, y[P] >= 0)    # crops purchase\n",
+    "    @variable(bl, w[P] >= 0)    # crops sold;\n",
+    "    @variable(bl, s[P] >= 0)\n",
+    "    @constraint(bl, bal[j in P], yield[i,j]*x[j]+y[j]-w[j] - s[j] == demand[j])\n",
+    "    setupperbound(w[3], 6000)\n",
+    "    setupperbound(y[3], 0)\n",
+    "    @objective(bl, Min, 1.0/NS*sum{pcost[j]*y[j] - scost[j]*w[j], j in P})\n",
     "end\n",
     "CluIPM_solve(m)"
    ]
